# humaid

./: .gitignore  DEVELOPMENT.md  Modelfile  README.md  WHY.md
docs/: ARCHITECTURE.md
docs/dev_notes/: ollama-publishing.md
events-map/: README.md  build.ts  index.html
events-map/data/: events.csv  events.json  locations.geojson
finetune-flood/: .env.example  .gitignore  PLAYBOOK.md  README.md  REPORT.md  deno.json
finetune-flood/app/: README.md  server.ts
finetune-flood/configs/: flood_modal.yaml
finetune-flood/data/: README.md  flood_eval.jsonl  flood_train.jsonl
finetune-flood/docs/: 00-overview.md  01-pipeline.md  02-data-collection.md  03-labeling.md  04-evaluation.md  05-findings.md  (+1 more)
knowledge-base/: .gitignore  AGENT_BRIEFING.md  README.md  deno.json  hf_push_dataset.ts  kb.duckdb  merge.ts  qa-pairs.csv  qa-stats.json
pitch/: README.md  ask.md  impact-model.md  landscape.md  one-pager.md  partners.md  problem.md  product.md  solution.md  traction.md  users.md  vision.md  why-now.md  zenu-history.md
research/: README.md  flood-tagging-and-reference-points.md  links.md  water-crisis-colombia.md  zenu-hydraulic-network.md
simsat/: README.md
tauri/: .gitignore  README.md  deno.json  index.html  vite.config.ts
tauri/src-tauri/: Cargo.toml  tauri.conf.json
tauri/src-tauri/assets/: seed_alerts.json
tauri/src-tauri/capabilities/: default.json
tauri/src-tauri/src/: alerts.rs  assets.rs  commands.rs  db.rs  docs.rs  kb.rs  lib.rs  main.rs  models.rs  ollama.rs
website/: .gitignore  README.md  deno-client.json  deno.json  main.tsx
(+445 files in other folders)
